# sobek

./: .gitignore  Cargo.toml
samples/: .gitignore  check.sh
src/: explore.rs  ir.rs  lib.rs  main.rs  mips.rs  n64.rs  nest.rs
src/arch/: _8051.rs  _8080.rs  mips.rs
src/ir/: build.rs  context.rs  mod.rs
src/isa/: _8051.rs  _8080.rs  i8051.rs  i8080.rs  mips.rs  mod.rs
src/platform/: mod.rs  n64.rs  unix.rs
src/soft/: explore.rs  ir.rs
src/soft/isa/: _8051.rs  _8080.rs  mips.rs
src/soft/platform/: n64.rs
