[package]
name = "sobek"
version = "0.0.1"
authors = ["Eduard-Mihai Burtescu <edy.burt@gmail.com>"]
edition = "2018"
repository = "https://github.com/eddyb/sobek"
license = "MIT/Apache-2.0"
description = "Reverse engineering framework."

[dependencies]
scoped-tls = "0.1.2"
elsa = "1.3.2"
ctrlc = "3.1.3"
itertools = "0.8.2"
term = "0.6.1"
paw = "1.0.0"
structopt = { version = "0.3.7", features = [ "paw" ] }

[lib]
doctest = false
test = false
